--- a/index.html
+++ b/index.html
@@ -310,20 +310,7 @@
 
 </footer>
 
- 
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-  const menuToggle = document.querySelector(".menu-toggle");
-  const navLinks = document.querySelector(".nav-links");
-
-  if(menuToggle && navLinks){
-    menuToggle.addEventListener("click", () => {
-      navLinks.classList.toggle("active");
-    });
-  }
-});
-</script>
-
+<script src="app.js"></script>
   
 </body>
 </html>
