--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
    <div class="footer-right">
 
   <div class="socials top">
-    <img src="images/Social icon.png">
+    <img src="images/Social icon.jpeg">
     <img src="images/Social icon (1).png">
-    <img src="images/Social icon (2).png">
+    <img src="images/Social icon (2).jpeg">
   </div>
 
   <div class="subscribe-box">
