--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
            
 <header class="navbar">
   <div class="logo">
-    <img src="images/Logo (1).png" alt="">
+    <img src="images/Logo (1).jpeg" alt="">
   </div>
 
   <nav class="nav-links">
@@ -45,18 +45,18 @@
   </div>
 
   <div class="hero-right">
-    <img src="images/Frame 29.png" alt="Megaphone">
+    <img src="images/Frame 29.jpeg" alt="Megaphone">
   </div>
 </section>
 
 <!-- BRANDS -->
 <section class="brands">
-  <img src="images/Company logo.png">
-  <img src="images/Company logo (1).png">
-  <img src="images/Company logo (2).png">
-  <img src="images/Company logo (3).png">
-  <img src="images/Company logo (4).png">
-  <img src="images/Company logo (5).png">
+  <img src="images/Company logo.jpeg">
+  <img src="images/Company logo (1).jpeg">
+  <img src="images/Company logo (2).jpeg">
+  <img src="images/Company logo (3).jpeg">
+  <img src="images/Company logo (4).jpeg">
+  <img src="images/Company logo (5).jpeg">
 </section>
 
 <section class="services">
@@ -77,7 +77,7 @@
       <h3>Search engine<br>optimization</h3>
 <a href="#" class="learn">
   <span class="icon">
-    <img src="images/Icon.png" alt="arrow">
+    <img src="images/Icon.jpeg" alt="arrow">
   </span>
   Learn more
 </a>
@@ -85,7 +85,7 @@
     </div>
 
     <div class="card-img">
-      <img src="images/Illustration.png" alt="SEO">
+      <img src="images/Illastration.jpeg" alt="SEO">
     </div>
   </div>
 
@@ -95,7 +95,7 @@
       <h3>Pay-per-click<br>advertising</h3>
     <a href="#" class="learn">
   <span class="icon">
-    <img src="images/Icon.png" alt="arrow">
+    <img src="images/Icon.jpeg" alt="arrow">
   </span>
   Learn more
 </a>
@@ -103,7 +103,7 @@
     </div>
 
     <div class="card-img">
-      <img src="images/Illustration (1).png" alt="PPC">
+      <img src="images/Illustration (1).jpeg" alt="PPC">
     </div>
   </div>
 
@@ -126,7 +126,7 @@
         <h3>Consultation</h3>
       </div>
       <button class="toggle">
-           <img src="images/Property 1=Minus.png" alt="minus">
+           <img src="images/1=Minus.jpeg" alt="minus">
       </button>
     </div>
 
