--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h3>Research and Strategy Development</h3>
       </div>
       <button class="toggle">
-           <img src="images/Property 1=Plus.png" alt="plus">
+           <img src="images/1=Plus.jpeg" alt="plus">
       </button>
     </div>
   </div>
@@ -162,7 +162,7 @@
         <h3>Implementation</h3>
       </div>
       <button class="toggle">
-            <img src="images/Property 1=Plus.png" alt="plus">
+            <img src="images/1=Plus.jpeg" alt="plus">
       </button>
     </div>
   </div>
@@ -175,7 +175,7 @@
         <h3>Monitoring and Optimization</h3>
       </div>
       <button class="toggle">
-            <img src="images/Property 1=Plus.png" alt="plus">
+            <img src="images/1=Plus.jpeg" alt="plus">
       </button>
     </div>
   </div>
@@ -187,7 +187,7 @@
         <h3>Reporting and Communication</h3>
       </div>
       <button class="toggle">
-       <img src="images/Property 1=Plus.png" alt="plus">
+       <img src="images/1=Plus.jpeg" alt="plus">
       </button>
     </div>
   </div>
@@ -199,7 +199,7 @@
         <h3>Continual Improvement</h3>
       </div>
       <button class="toggle">
-         <img src="images/Property 1=Plus.png" alt="plus">
+         <img src="images/1=Plus.jpeg" alt="plus">
       </button>
     </div>
   </div>
@@ -252,7 +252,7 @@
 
     <!-- RIGHT IMAGE -->
     <div class="contact-img">
-      <img src="images/Illustration (2).png" alt="illustration">
+      <img src="images/Illustration (2).jpeg" alt="illustration">
     </div>
 
   </div>
