--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
     <!-- LEFT -->
     <div class="footer-left">
-      <img src="images/Logo (2).png" alt="Positivus Logo" class="footer-logo">
+      <img src="images/Logo (1).jpeg" alt="Positivus Logo" class="footer-logo">
 
       <span class="tag small">Contact us:</span>
 
