--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
            
 <header class="navbar">
   <div class="logo">
-    <img src="" alt="">
+    <img src="images/Logo (1).jpeg" alt="">
   </div>
 
   <nav class="nav-links">
