--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 
   <div class="hero-right">
-    <img src="images/Frame 29.jpeg" alt="Megaphone">
+    <img src="images/Frame_29-removebg-preview.png" alt="Megaphone">
   </div>
 </section>
 
