--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
     <!-- RIGHT IMAGE -->
     <div class="contact-img">
-      <img src="images/Illustration (2).jpeg" alt="illustration">
+      <img src="images/download.png" alt="illustration">
     </div>
 
   </div>
@@ -271,8 +271,8 @@
       <p>Email: info@positivus.com</p>
       <p>Phone: 555-567-8901</p>
       <p>Address: 1234 Main St<br>
-         Moonstone City, Stardust State 12345</p>
-    </div>
+       Moonstone City, Stardust State 12345</p>
+      </div>
 
     <!-- CENTER -->
     <nav class="footer-nav">
